add article component with voting functionality and integrate into app

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,3 +15,6 @@
           class="ui positive right floated button">
     Submit link
   </button>
+</form>
+<div class="ui grid posts"> <app-article> </app-article>
+</div>
