--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -1,7 +1,7 @@
 <div class="four wide column center aligned votes">
     <div class="ui statistic">
         <div class="value"> 
-            {{ votes }}
+            {{ articles.votes }}
         </div>
     <div class="label">
          Points
@@ -9,8 +9,8 @@
     </div>
 </div>     
       <div class="twelve wide column"> 
-    <a class="ui large header" href="{{ link }}">
-        {{ title }}
+    <a class="ui large header" href="{{ articles.Link}}">
+        {{ articles.Title}}
      </a>
 <ul class="ui big horizontal list voters"> <li class="item">
 <a href (click)="voteUp()"> <i class="arrow up icon"></i> upvote
