--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,5 +16,7 @@
     Submit link
   </button>
 </form>
-<div class="ui grid posts"> <app-article> </app-article>
+<div class="ui grid posts"> 
+  <app-article *ngFor="let article of articles"
+  [article]="article"> </app-article>
 </div>
