--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -9,8 +9,8 @@
     </div>
 </div>     
       <div class="twelve wide column"> 
-    <a class="ui large header" href="{{ article.Link}}">
-        {{ article.Title}}
+    <a class="ui large header" href="{{ article.link}}">
+        {{ article.title}}
      </a>
 <ul class="ui big horizontal list voters"> <li class="item">
 <a href (click)="voteUp()"> <i class="arrow up icon"></i> upvote
